@@ -6,9 +6,9 @@ module Admin
       render File.join(path, "applications")
     end
 
-    def resources(current_user)
+    def resources(admin_user)
       available = Typus.resources.map do |resource|
-                    resource if current_user.resources.include?(resource)
+                    resource if admin_user.resources.include?(resource)
                   end.compact
       render File.join(path, "resources"), :resources => available
     end
