@@ -7,7 +7,7 @@ module Admin
       app_name = @resource.typus_application
 
       Typus.application(app_name).sort {|a,b| a.typus_constantize.model_name.human <=> b.typus_constantize.model_name.human}.each do |resource|
-        next unless current_user.resources.include?(resource)
+        next unless admin_user.resources.include?(resource)
         klass = resource.typus_constantize
 
         resources[resource] = default_actions(klass)
@@ -22,7 +22,7 @@ module Admin
 
     def default_actions(klass)
       Array.new.tap do |tap|
-        tap << link_to_unless_current(_t("Add new"), :action => "new") if current_user.can?("create", klass)
+        tap << link_to_unless_current(_t("Add new"), :action => "new") if admin_user.can?("create", klass)
         tap << link_to_unless_current(_t("List"), :action => "index")
       end
     end
@@ -35,7 +35,7 @@ module Admin
 
     def custom_actions(klass)
       klass.typus_actions_on(params[:action]).map do |action|
-        if current_user.can?(action, klass)
+        if admin_user.can?(action, klass)
           link_to_unless_current(_t(action.humanize), params.merge(:action => action))
         end
       end
