@@ -13,4 +13,4 @@
 
 <%= applications %>
 
-<%= resources(current_user) %>
+<%= resources(admin_user) %>
