@@ -1,7 +1,7 @@
 <ul>
   <% dashboard = 'active' if params[:controller].include?('dashboard') %>
   <li><%= link_to _t("Dashboard"), admin_dashboard_path, :class => dashboard %></li>
-  <% current_user.applications.each do |app| %>
+  <% admin_user.applications.each do |app| %>
     <% klass = (@resource && Typus.application(app).include?(@resource.name)) ? 'active' : nil %>
     <% controller = Typus.application(app).sort.first.tableize %>
     <li><%= link_to _t(app), { :controller => "/admin/#{controller}" }, { :class => klass } %></li>
