@@ -9,7 +9,7 @@ module Typus
       include Base
 
       def authenticate
-        @current_user = FakeUser.new
+        @admin_user = FakeUser.new
         authenticate_or_request_with_http_basic(Typus.admin_title) do |user_name, password|
           user_name == Typus.username && password == Typus.password
         end
