@@ -10,8 +10,8 @@ class Admin::DashboardHelperTest < ActiveSupport::TestCase
   def render(*args); args; end
 
   should "render resources" do
-    current_user = Factory(:typus_user)
-    output = resources(current_user)
+    admin_user = Factory(:typus_user)
+    output = resources(admin_user)
     expected = ["admin/helpers/dashboard/resources", { :resources => ["Git", "Status", "WatchDog"] }]
     assert_equal expected, output
   end
