@@ -10,8 +10,8 @@ class Admin::FormHelperTest < ActiveSupport::TestCase
     params = { :controller => '/admin/post', :id => 1, :action => :create }
     self.stubs(:params).returns(params)
 
-    current_user = mock
-    current_user.stubs(:can?).with('create', Post).returns(false)
+    admin_user = mock
+    admin_user.stubs(:can?).with('create', Post).returns(false)
     @resource = Comment
 
     expected = <<-HTML
@@ -34,8 +34,8 @@ class Admin::FormHelperTest < ActiveSupport::TestCase
     params = { :controller => '/admin/post', :id => 1, :action => :edit }
     self.stubs(:params).returns(params)
 
-    current_user = mock
-    current_user.stubs(:can?).with('create', Comment).returns(true)
+    admin_user = mock
+    admin_user.stubs(:can?).with('create', Comment).returns(true)
     @resource = Post
 
     expected = <<-HTML
