@@ -23,7 +23,7 @@ class Admin::TableHelperTest < ActiveSupport::TestCase
 
   def render(*args); args; end
   def params; {} end
-  def current_user; end
+  def admin_user; end
 
   setup do
     default_url_options[:host] = "test.host"
@@ -64,13 +64,13 @@ class Admin::TableHelperTest < ActiveSupport::TestCase
     end
 
     should "work with associated model when user has access" do
-      current_user.expects(:can?).returns(true)
+      admin_user.expects(:can?).returns(true)
       comment = Factory(:comment)
       assert_equal %(<a href="/admin/posts/edit/1">Post#1</a>), table_belongs_to_field("post", comment)
     end
 
     should "work with associated model when user does not have access" do
-      current_user.expects(:can?).returns(false)
+      admin_user.expects(:can?).returns(false)
       comment = Factory(:comment)
       assert_equal "Post#1", table_belongs_to_field("post", comment)
     end
