@@ -64,6 +64,8 @@ filters.
 [NEW] Custom actions can be injected into table actions. This needs some
 refector to be more powerful (roles) but it works for now.
 
+[CHANGED] `current_user` is now `admin_user`.
+
 [3.0.2]
 
 [FIXED] Use Arel to get the data on lists. After moving to will_paginate I
